assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,300;1,400&family=Viga&display=swap');

* {
    margin: 0;
    padding: 0;
    border: 0;
    text-decoration: none;
}

body {
    background-color:#FFF6F3;
    font-family: Sarabun, serif;
    color:#BB8378;
}

/* Navbar*/

.nav-link {
    font-size: larger;
    color: #EDE9D0;
    background-color: #DF7D6D;
}

.nav-link:hover {
    color: #FFF6F3;
}


.navbar-brand {
    font-family: Viga, serif;
    text-transform: uppercase;
    letter-spacing: 8px;
    font-weight: 600;
    color: #FFF6F3;
    background-color: #DF7D6D;
}

.navbar-brand:hover {
    color: #EDE9D0
}

.navbar {
    border: 0;
    width: 100%;
    background-color: #DF7D6D ;
    color: #FFF6F3;
}

.navbar-toggler {
    border: 0;
    color: #FFF6F3;
}


/* jumbotron */

.background-container{
    height: 40vh;

    background: url('../images/hero.jpg') no-repeat bottom center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    display: flex;
    align-items: center;
    width: auto;
    justify-content: center;

    position: relative;
}

.jumbotron {
    background-position: center center;
    padding: 0;
}

.jumbotron-header {
    color: #EDE9D0;
}
/* Features */

.features-container {
    margin-top: 50px;
    margin-bottom: 50px;
}

/* Footer */
/* Inpiration for the design of this footer taken from the Miniproject with boostrap */
footer {
    background-color: #DF7D6D;
    color: #FFF6F3;
    min-height: 100px;
    width: 100%;
    margin: 0;
    padding: 10px;
}

.btn {
    background-color: #FFF6F3;
    border: #BB8378;
    margin: 15px;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 30px;
    line-height: 30px;
    align-items: flex-end;
    color: #FFF6F3;
    background: #DF7D6D;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links {
    float: right;
    margin-right: 20px;
}

/* Footer */

/* Cards */
.card {
    align-content: center;
    margin-bottom: 15px;
}

.btn-card {
    border: 5px;
    width: 75%;
    background-color: #DF7D6D ;
    color: #EDE9D0;
}

.btn-card:hover {
    color: #FFF6F3
}


/* list*/

.price-container {
    text-align: center;
}

/* Schedule*/

.teachers-container {
    padding: 20px;
    background-color: #DF7D6D;
    color: #FFF6F3;
}

h2 {
    padding: 20px;
}

/* contact us */

form {
    max-width: 500px;
    margin: auto;
}

.contact-us {
    text-align: center;
    padding: 25px;
}

/* media */

.features {
    text-align: center;
    padding: 25px;
}

img {
    height: 200px;
    width: 200px;
    padding: 25px;
}

.btn-modal {
    background-color: #DF7D6D;
    color: #FFF6F3;
}

.form-control {
    border: 0;
}

